# stenciler

./: .devcontainer.json  .gitattributes  .gitignore  .golangci.yaml  .goreleaser.yaml  .releaserc  CONTRIBUTING.md  README.md  go.mod  go.sum  main.go  pyproject.toml  stenciler-schema.json
.commitlint/hooks/: commit-msg
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/userhome/: .zshrc
.devcontainer/userhome/.ohmyzsh-custom/: 02-development.zsh
.github/: dependabot.yml
.github/workflows/: ci.yaml  pr-conventional-commits.yaml  release.yaml
cmd/: doc.go  init.go  root.go  update.go
config/: config.go  config_test.go  doc.go  merge.go  merge_test.go  param.go  validate.go  validate_test.go
features/: clone.feature  environment.py  simple.feature
features/init/: clone.feature  local.feature  simple.feature
features/steps/: github.py  local.py  local_validate.py  simple.py  stenciler.py  template.py
features/update/: local.feature
files/: common.go  doc.go  raw.go  raw_test.go  template.go  template_test.go
foo/: .stenciler.yaml
git/: clone.go  doc.go  hash.go
hooks/: doc.go  execute.go  validate.go  validate_test.go
prompt/: doc.go  params.go  params_test.go  prompt_suite_test.go  template.go  template_test.go
samples/: stenciler-local.yaml  stenciler-template.yaml
