[tool.pylint.format]
max-line-length = "88"
[tool.pylint."messages control"]
disable = [
    "C0114",
    "C0116",
    "E0102",
    "E0611"
]


[tool.poetry]
name = "stenciler"
version = "0.1.0"
description = "Functional tests for stenciler"
authors = ["Jay Burgess <jay@rogueserenity.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
behave = "^1.2.6"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
