[tool.pylint.format]
max-line-length = "88"
[tool.pylint."messages control"]
disable = ["C0114", "C0116", "E0102", "E0611", "E1102"]


[tool.poetry]
name = "stenciler"
version = "0.1.0"
description = "Functional tests for stenciler"
authors = ["Jay Burgess <jay@rogueserenity.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
behave = "^1.3.3"
pyyaml = "^6.0.3"


[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
pylint = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
